--- a/css/inicio-style.css
+++ b/css/inicio-style.css
@@ -13,3 +13,28 @@
 #menu-contato {
     border-bottom: none;
 }
+
+.banner {
+    width: 100%;
+    height: 70vh;
+    background-color: bisque;
+}
+
+.banner-text h1 {
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 1000;
+}
+
+.banner {
+    display: flex;
+    align-items: center;
+}
+
+.banner-text {
+    width: 400px;
+    height: 20%;
+    margin-left: 10%;
+}
+
+
+
