--- a/css/inicio-style.css
+++ b/css/inicio-style.css
@@ -17,23 +17,30 @@
 .banner {
     width: 100%;
     height: 70vh;
-    background-color: bisque;
+    display: flex;
+    align-items: center;
+    background-image: url(../img/dog-banner.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.banner-text {
+    width: 500px;
+    height: 200px;
+    margin-left: 10%;
+    color: white;
 }
 
 .banner-text h1 {
     font-family: 'Nunito Sans', sans-serif;
     font-weight: 1000;
+    font-size: 48px;
+    padding: 10px 0;
 }
 
-.banner {
-    display: flex;
-    align-items: center;
-}
-
-.banner-text {
-    width: 400px;
-    height: 20%;
-    margin-left: 10%;
+.banner-text p {
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
 }
 
 
