--- a/css/inicio-style.css
+++ b/css/inicio-style.css
@@ -43,5 +43,88 @@
     font-size: 16px;
 }
 
+/* REVISAR */
 
+.pointer-separator {
+    width: 100%;
+    height: 1px;
+    border-bottom: 2px dotted black;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 80px;
+}
+
+.black-circle {
+    background: #000000;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.how-it-works-content {
+    background-color: #F2F2F2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px 0;
+}
+
+.how-it-works-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.how-it-works-item h3 {
+    padding-top: 20px;
+}
+
+.how-it-works-content h2 {
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 1000;
+    font-size: 34px;
+    padding: 10px 0;
+}
+
+.how-it-works-menu {
+    height: 200px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 4%;
+}
+
+.circle {
+    background: #FFC90E;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.circle img {
+    width: 100px;
+    height: 100px;
+}
+
+.how-it-works-text {
+    width: 100%;
+    height: 70vh;
+    background-color: #FFC90E;
+    margin-top: 150px;
+}
+
+.photo1 {
+    width: 100px;
+    height: 250px;
+    background-color: red;
+}
 
