--- a/css/inicio-style.css
+++ b/css/inicio-style.css
@@ -101,7 +101,7 @@
 }
 
 .circle {
-    background: #FFC90E;
+    background: rgba(255, 201, 14, 0.82);
     border-radius: 50%;
     width: 150px;
     height: 150px;
@@ -115,16 +115,76 @@
     height: 100px;
 }
 
-.how-it-works-text {
+.how-it-works-info {
     width: 100%;
-    height: 70vh;
-    background-color: #FFC90E;
-    margin-top: 150px;
+    height: 60vh;
+    background-color: rgba(255, 201, 14, 0.82);
+    margin-top: 230px;
+    display: flex;
 }
 
-.photo1 {
-    width: 100px;
-    height: 250px;
-    background-color: red;
+.how-it-works-info-image {
+    width: 50%;
+    height: 100%;
+    display: flex;
+}
+
+.photo-1 {
+    width: 200px;
+    height: 500px;
+    background-image: url(../img/dog-menu-1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-left: 200px;
+    margin-top: -70px;
+}
+
+.photo-2 {
+    width: 200px;
+    height: 600px;
+    background-image: url(../img/dog-menu-2.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-left: 30px;
+    margin-top: -100px;
+}
+
+.photo-3 {
+    width: 200px;
+    height: 500px;
+    background-image: url(../img/dog-menu-3.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-left: 30px;
+    margin-top: -70px;
+}
+
+.how-it-works-info-text {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.how-it-works-info-text h2 {
+    width: 50%;
+    height: 300px;
+    font-size: 2.5rem;
+    font-weight: 600;
+}
+
+.how-it-works-info-text-h2-color {
+    color: white;
+}
+
+@media (max-width: 730px) {
+    .how-it-works-content {
+        display: none;
+    }
+
 }
 
