--- a/css/inicio-style.css
+++ b/css/inicio-style.css
@@ -70,7 +70,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px 0;
+    padding-top: 40px;
 }
 
 .how-it-works-item {
@@ -98,9 +98,10 @@
     align-items: center;
     justify-content: space-around;
     margin-top: 4%;
+    margin-bottom: 70px;
 }
 
-.circle {
+.circle-how-it-works {
     background: rgba(255, 201, 14, 0.82);
     border-radius: 50%;
     width: 150px;
@@ -110,75 +111,100 @@
     align-items: center;
 }
 
-.circle img {
+.circle-how-it-works img {
     width: 100px;
     height: 100px;
 }
 
-.how-it-works-info {
+.how-it-works-text {
     width: 100%;
-    height: 60vh;
+    height: 40vh;
     background-color: rgba(255, 201, 14, 0.82);
-    margin-top: 230px;
-    display: flex;
-}
-
-.how-it-works-info-image {
-    width: 50%;
-    height: 100%;
-    display: flex;
-}
-
-.photo-1 {
-    width: 200px;
-    height: 500px;
-    background-image: url(../img/dog-menu-1.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin-left: 200px;
-    margin-top: -70px;
-}
-
-.photo-2 {
-    width: 200px;
-    height: 600px;
-    background-image: url(../img/dog-menu-2.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin-left: 30px;
-    margin-top: -100px;
-}
-
-.photo-3 {
-    width: 200px;
-    height: 500px;
-    background-image: url(../img/dog-menu-3.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin-left: 30px;
-    margin-top: -70px;
-}
-
-.how-it-works-info-text {
-    width: 50%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.how-it-works-info-text h2 {
-    width: 50%;
-    height: 300px;
-    font-size: 2.5rem;
-    font-weight: 600;
+.how-it-works-text-h2 {
+    width: 60%;
+    text-align: center;
 }
 
-.how-it-works-info-text-h2-color {
+.how-it-works-text-h2 h2 {
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 1000;
+    font-size: 34px;
+    padding: 10px 0;
+}
+
+.how-it-works-text-h2-color {
     color: white;
+}
+
+.our-services {
+    height: 50vh;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+}
+
+    .our-services-menu {
+        display: flex;
+        justify-content: space-around;
+        width: 50%;
+        text-align: center;
+    }
+
+.our-services-adopt {
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+}
+
+.our-services-appointment {
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+}
+
+.our-services-appointment h3, .our-services-adopt h3 {
+    padding: 20px 0;
+}
+
+.our-services-appointment p, .our-services-adopt p {
+    width: 200px;
+}
+
+.our-services-appointment button, .our-services-adopt button {
+    font-size: 0.75rem;
+    font-weight: 700;
+    border: none;
+    border-radius: 5px;
+    background-color: #FFC90E;
+    padding: 15px 60px;
+    margin: 1rem 0 0 0;
+    cursor: pointer;
+}
+
+.circle-our-services {
+    background: #D9D9D9;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer {
+    height: 70vh;
+    background-color: bisque;
 }
 
 @media (max-width: 730px) {
