--- a/css/inicio-style.css
+++ b/css/inicio-style.css
@@ -146,14 +146,15 @@
     background-color: #ffffff;
     display: flex;
     justify-content: center;
+    padding: 4em;
 }
 
-    .our-services-menu {
-        display: flex;
-        justify-content: space-around;
-        width: 50%;
-        text-align: center;
-    }
+.our-services-menu {
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+    text-align: center;
+}
 
 .our-services-adopt {
     width: 300px;
@@ -202,10 +203,69 @@
     align-items: center;
 }
 
-footer {
-    height: 70vh;
-    background-color: bisque;
+/* SLIDE IMAGENS */
+.slide-images {
+    height: 35vh;
+    width: 100%;
+    display: flex;
 }
+
+.image-config {
+    width: 25%;
+    height: 35vh;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#slide-photo1 {
+    background-image: url(../img/dog-menu-1.jpg);
+}
+
+#slide-photo2 {
+    background-image: url(../img/dog-menu-2.jpg);
+}
+
+#slide-photo3 {
+    background-image: url(../img/dog-menu-3.jpg);
+}
+
+#slide-photo4 {
+    background-image: url(../img/dog-menu-4.jpg);
+}
+
+footer {
+    background-color: rgba(72, 72, 84, 0.8);
+    height: 50vh;
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-content {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+.footer-content a {
+    color: white;
+}
+
+.footer-content li {
+    list-style: none;
+    padding: 5px;
+}
+
+.footer-nav-shortcut h3 {
+    color: white;
+    padding: 10px 0;
+}
+
+
 
 @media (max-width: 730px) {
     .how-it-works-content {
