--- a/css/quem-somos-style.css
+++ b/css/quem-somos-style.css
@@ -14,3 +14,114 @@
     border-bottom: none;
 }
 
+.banner-qs {
+    width: 100%;
+    height: 60vh;
+    display: flex;
+    align-items: center;
+    background-image: url(../img/dog-banner.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 80%    ;
+}
+
+.banner-text-qs {
+    margin-left: 4%;
+    margin-top: 20%;
+    color: white;
+}
+
+.banner-text-qs h1 {
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 1000;
+    font-size: 48px;
+    padding: 10px 0;
+}
+
+.org-felpudos-content {
+    background-color: #F2F2F2;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    padding: 40px 0;
+}
+
+.org-felpudos-content h2{
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 1000;
+    font-size: 20px;
+    padding: 10px 0;
+    margin-left: 4%;
+}
+
+.org-felpudos-content p{
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    margin-left: 4%;
+    text-align: left;
+}
+
+.org-felpudos-content h3{
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 1000;
+    font-size: 30px;
+    padding: 10px 0;
+    margin-left: 4%;
+    margin-top: 3%;
+}
+
+
+.goal-content {
+    width: 500px;
+    display: flex;
+}
+
+.goal-content h2 {
+    padding: 10px;
+}
+
+.goal-global {
+    width: 100vw;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 40px;
+}
+
+.goal-global-col1 {
+    padding: 10px;
+    width: 400px;
+}
+
+.goal-global-col2 {
+    padding: 10px;
+    width: 400px;
+}
+
+.goal-container {
+    display: flex;
+    width: 60vw;
+}
+
+.goal-content h3 {
+    padding-top: 10px;
+}
+
+.circle-goal {
+    background: rgba(255, 201, 14, 0.82);
+    border-radius: 50%;
+    width: 75px;
+    height: 75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 4%;
+    margin-top: 2%;
+}
+
+.goal-content p {
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    margin-top: 4%;
+}
+    
+
