--- a/css/contato-style.css
+++ b/css/contato-style.css
@@ -1,3 +1,13 @@
+/* ESTILIZAÇÃO GERAL */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* ESTILIZAÇÃO DO HEADER */
+
 #menu-inicio {
     border-bottom: none;
 }
@@ -7,9 +17,34 @@
 }
 
 #menu-quero-ajudar {
-    border-bottom: none;
+    border-bottom: 2px solid #FFC90E;
 }
 
 #menu-contato {
-    border-bottom: 2px solid #FFC90E;
+    border-bottom: none;
+}
+
+/* ESTILIZAÇÃO DA MAIN */
+
+.banner {
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    align-items: center;
+    background-image: url(../img/dog-banner.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.banner-text {
+    width: 500px;
+    margin-left: 10%;
+    color: white;
+}
+
+.banner-text h1 {
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 1000;
+    font-size: 48px;
+    padding: 10px 0;
 }
