--- a/css/quem-somos-style.css
+++ b/css/quem-somos-style.css
@@ -1,3 +1,13 @@
+/* ESTILIZAÇÃO GERAL */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* ESTILIZAÇÃO DO HEADER */
+
 #menu-inicio {
     border-bottom: none;
 }
@@ -14,55 +24,60 @@
     border-bottom: none;
 }
 
-.banner-qs {
+/* ESTILIZAÇÃO DA MAIN */
+
+.banner {
     width: 100%;
-    height: 60vh;
+    height: 70vh;
     display: flex;
     align-items: center;
     background-image: url(../img/dog-banner.png);
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 80%    ;
 }
 
-.banner-text-qs {
-    margin-left: 4%;
-    margin-top: 20%;
+.banner-text {
+    width: 500px;
+    margin-left: 10%;
     color: white;
 }
 
-.banner-text-qs h1 {
+.banner-text h1 {
     font-family: 'Nunito Sans', sans-serif;
     font-weight: 1000;
     font-size: 48px;
     padding: 10px 0;
 }
 
-.org-felpudos-content {
-    background-color: #F2F2F2;
+section.primeiro-texto {
+    margin-top: 60px;
     display: flex;
-    flex-direction: column;
-    align-items: left;
-    padding: 40px 0;
+    padding: 40px 4%;
+    gap: 400px;
 }
 
-.org-felpudos-content h2{
-    font-family: 'Nunito Sans', sans-serif;
-    font-weight: 1000;
-    font-size: 20px;
-    padding: 10px 0;
-    margin-left: 4%;
+section.primeiro-texto p {
+    margin-top: 50px;
+    text-align: justify;
+}
+
+.org-felpudos-content {
+    margin-bottom: 50px;
 }
 
 .org-felpudos-content p{
-    font-family: 'Inter', sans-serif;
     font-size: 16px;
     margin-left: 4%;
     text-align: left;
 }
 
+.org-felpudos-content h2 {
+    display: flex;
+    padding: 20px 4%;
+    gap: 400px;
+}
+
 .org-felpudos-content h3{
-    font-family: 'Nunito Sans', sans-serif;
     font-weight: 1000;
     font-size: 30px;
     padding: 10px 0;
@@ -72,19 +87,12 @@
 
 
 .goal-content {
-    width: 500px;
     display: flex;
-}
-
-.goal-content h2 {
-    padding: 10px;
+    margin-top: 20px;
 }
 
 .goal-global {
-    width: 100vw;
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 40px;
+    margin-left: 90px;
 }
 
 .goal-global-col1 {
@@ -100,10 +108,6 @@
 .goal-container {
     display: flex;
     width: 60vw;
-}
-
-.goal-content h3 {
-    padding-top: 10px;
 }
 
 .circle-goal {
