--- a/css/inicio-style.css
+++ b/css/inicio-style.css
@@ -70,7 +70,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px 0;
+    padding-top: 40px;
 }
 
 .how-it-works-item {
@@ -98,10 +98,11 @@
     align-items: center;
     justify-content: space-around;
     margin-top: 4%;
+    margin-bottom: 70px;
 }
 
-.circle {
-    background: #FFC90E;
+.circle-how-it-works {
+    background: rgba(255, 201, 14, 0.82);
     border-radius: 50%;
     width: 150px;
     height: 150px;
@@ -110,21 +111,135 @@
     align-items: center;
 }
 
-.circle img {
+.circle-how-it-works img {
     width: 100px;
     height: 100px;
 }
 
 .how-it-works-text {
     width: 100%;
-    height: 70vh;
-    background-color: #FFC90E;
-    margin-top: 150px;
+    height: 40vh;
+    background-color: rgba(255, 201, 14, 0.82);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.photo1 {
-    width: 100px;
-    height: 250px;
-    background-color: red;
+.how-it-works-text-h2 {
+    width: 60%;
+    text-align: center;
+}
+
+.how-it-works-text-h2 h2 {
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 1000;
+    font-size: 34px;
+    padding: 10px 0;
+}
+
+.how-it-works-text-h2-color {
+    color: white;
+}
+
+.our-services {
+    height: 70vh;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+    padding: 1em;
+}
+
+.our-services-menu {
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+    text-align: center;
+}
+
+.our-services-adopt {
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+}
+
+
+.our-services-appointment {
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+}
+
+.our-services-appointment h3, .our-services-adopt h3 {
+    padding: 20px 0;
+}
+
+.our-services-appointment p, .our-services-adopt p {
+    width: 200px;
+}
+
+.our-services-appointment button, .our-services-adopt button {
+    font-size: 0.75rem;
+    font-weight: 700;
+    border: none;
+    border-radius: 5px;
+    background-color: #FFC90E;
+    padding: 15px 60px;
+    margin: 1rem 0 0 0;
+    cursor: pointer;
+}
+
+.circle-our-services {
+    background: #D9D9D9;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* SLIDE IMAGENS */
+.slide-images {
+    height: 35vh;
+    width: 100%;
+    display: flex;
+}
+
+.image-config {
+    width: 25%;
+    height: 35vh;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#slide-photo1 {
+    background-image: url(../img/dog-menu-1.jpg);
+}
+
+#slide-photo2 {
+    background-image: url(../img/dog-menu-2.jpg);
+}
+
+#slide-photo3 {
+    background-image: url(../img/dog-menu-3.jpg);
+}
+
+#slide-photo4 {
+    background-image: url(../img/dog-menu-4.jpg);
+}
+
+
+@media (max-width: 730px) {
+    .how-it-works-content {
+        display: none;
+    }
+
 }
 
