--- a/css/quem-somos-style.css
+++ b/css/quem-somos-style.css
@@ -1,3 +1,13 @@
+/* ESTILIZAÇÃO GERAL */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* ESTILIZAÇÃO DO HEADER */
+
 #menu-inicio {
     border-bottom: none;
 }
@@ -13,3 +23,109 @@
 #menu-contato {
     border-bottom: none;
 }
+
+/* ESTILIZAÇÃO DA MAIN */
+
+.banner {
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    align-items: center;
+    background-image: url(../img/dog-banner.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.banner-text {
+    width: 500px;
+    margin-left: 10%;
+    color: white;
+}
+
+.banner-text h1 {
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 1000;
+    font-size: 48px;
+    padding: 10px 0;
+}
+
+section.primeiro-texto {
+    margin-top: 60px;
+    display: flex;
+    padding: 40px 4%;
+    gap: 400px;
+}
+
+section.primeiro-texto p {
+    margin-top: 50px;
+    text-align: justify;
+}
+
+.org-felpudos-content {
+    margin-bottom: 50px;
+}
+
+.org-felpudos-content p{
+    font-size: 16px;
+    margin-left: 4%;
+    text-align: left;
+}
+
+.org-felpudos-content h2 {
+    display: flex;
+    padding: 20px 4%;
+    gap: 400px;
+}
+
+.org-felpudos-content h3{
+    font-weight: 1000;
+    font-size: 30px;
+    padding: 10px 0;
+    margin-left: 4%;
+    margin-top: 3%;
+}
+
+
+.goal-content {
+    display: flex;
+    margin-top: 20px;
+}
+
+.goal-global {
+    margin-left: 90px;
+}
+
+.goal-global-col1 {
+    padding: 10px;
+    width: 400px;
+}
+
+.goal-global-col2 {
+    padding: 10px;
+    width: 400px;
+}
+
+.goal-container {
+    display: flex;
+    width: 60vw;
+}
+
+.circle-goal {
+    background: rgba(255, 201, 14, 0.82);
+    border-radius: 50%;
+    width: 75px;
+    height: 75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 4%;
+    margin-top: 2%;
+}
+
+.goal-content p {
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    margin-top: 4%;
+}
+    
+
