--- a/css/quero-ajudar-style.css
+++ b/css/quero-ajudar-style.css
@@ -88,3 +88,44 @@ section.section-texto-segundo {
 .como-funciona h2 {
     margin-bottom: 30px;
 }
+
+/* ESTILO DAS ESPECIALIDADES */
+
+.interface {
+    max-width: 1280px;
+    margin: 0 auto;
+}
+
+.flex {
+    display: flex                                                                                                                                                                                                                                                                                                       ;
+}
+
+section.especialidades {
+    padding: 40px 4%;
+}
+
+section.especialidades .flex {
+    gap: 60px;
+} 
+
+.especialidades .especialidade-box {
+    padding: 40px;
+    border-radius: 20px;
+    margin-top: 45px;
+    transition: .2s;
+}
+
+.especialidades .especialidade-box:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 8px #ffffff51;
+}
+
+.especialidades .especialidade-box i {
+    font-size: 70px;
+    color: #FFC90E;
+}
+
+.especialidades .especialidade-box h3 {
+    font-size: 30px;
+    margin: 15px 0;
+}
