--- a/css/cadastro-animal-style.css
+++ b/css/cadastro-animal-style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@400;500&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Rubik', sans-serif;
+}
+
 #para-adotar {
     border-bottom: none;
 }
@@ -6,12 +14,150 @@
     border-bottom: 2px solid #FFC90E;
 }
 
+/* Main do Site */
+
+.container{
+    background-color: #E6E6E6;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.wrapper{
+    position: relative;
+    width: 40%;
+    height: 450px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.top{
+    display: flex;
+    align-items: center;
+    position: relative;
+    top:15px;
+    z-index: 2;
+}
+
+.top span{
+    font-size: 40px;
+    font-weight: 500;
+    font-family: 'Gabarito', cursive;
+}
+
+.top span:first-child{
+    color:#1F2A32;
+}
+
+.top span:last-child{
+    color:#FFC90E;
+}
+
+.bottom {
+    position: relative;
+    background-color: #8b6857;
+    width: 80%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+}
 
 
-@media (max-width: 730px) {
-    .how-it-works-content {
-        display: none;
+.bottom form{
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    gap: 10px;
+    height: 100%;
+    width: 80%;   
+    padding: 0px 20px;
+}
+
+.bottom form input{
+    border: none;
+    outline: 0;
+    padding: 10px;
+    border-radius: 20px;
+    width: 95%;
+    
+}
+
+h3 {
+    font-family: 'Gabarito', cursive;
+    font-size: 30px;
+    letter-spacing: 2px;
+    text-align: center;
+}
+
+.form-input label {
+    font-family: 'Gabarito', cursive;
+    font-size: 20px;
+}
+
+.form-input select {
+    cursor: pointer;
+}
+
+.singUp {
+    margin-top: 10px;
+    text-align: center;
+}
+
+.singUp button {
+    font-family: 'Gabarito', cursive;
+    background: #ffe37d;
+    color:black;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 4px;
+    letter-spacing: 1px;
+    cursor: pointer;
+}
+
+.singUp button:hover {
+    background-color: #ffc800;
+}
+
+.singUp button i{
+    color:black;
+    font-size: 16px;
+    margin-left: 10px;
+}
+
+/* Estilização das patinhas */
+
+.container .paw{
+    font-size: 80px;
+    position: relative;
+}
+
+.container .paw:first-child{
+    bottom:100px;
+    right:200px;
+    color: #ffc800;
+    transform: rotate(-20deg);
+}
+
+.container .paw:last-child{
+    top:100px;
+    left:200px;
+    color: #ffc800;
+    transform: rotate(20deg);
+}
+
+@media (max-width: 1200px) {
+    .wrapper{
+        width: 70%;
     }
 
+    .container .paw{
+        display: none;
+    }
 }
 
