--- a/css/login-style.css
+++ b/css/login-style.css
@@ -139,3 +139,10 @@ p {
         width: 75%;
     }
 }
+
+@media (max-width: 730px) {
+    .how-it-works-content {
+        display: none;
+    }
+
+}
