Colocando imagem no banco

--- a/css/cadastro-animal-style.css
+++ b/css/cadastro-animal-style.css
@@ -134,6 +134,10 @@ h3 {
     text-align: center;
 }
 
+.imagem label {
+    display: flex;
+}
+
 .singUp button {
     font-family: 'Gabarito', cursive;
     background: #ffe37d;
