--- a/css/administrador-consulta.css
+++ b/css/administrador-consulta.css
@@ -7,7 +7,7 @@
 }
 
 #para-adotar {
-    border-bottom: none;
+    border-bottom: 2px solid #FFC90E;
 }
 
 #consulta {
@@ -25,6 +25,14 @@ body {
     background-color: #E6E6E6;
 }
 
+form {
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+	text-align: center;
+	margin-bottom: 20px;
+}
+
 
 .form-input {
     margin-top: 20px;
@@ -32,13 +40,34 @@ body {
 }
 
 .btn-pesquisar {
-	display: block;
 	margin: auto;
 	padding: 10px 20px;
 	border-radius: 5px;
 	border: none;
-	background-color: #FFC90E;
-	color: black;
+	background-color: #ffcb0e91;
+	color: #FFFFFF;
+	font-size: 16px;
+	font-weight: bold;
+	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+	cursor: pointer;
+	transition: background-color 0.2s ease-in-out;
+}
+
+.btn-container {
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+	text-align: center;
+}
+
+.btn {
+	margin: auto;
+	text-align: center;
+	padding: 10px 20px;
+	border-radius: 5px;
+	border: none;
+	background-color: #1D594E;
+	color: #FFFFFF;
 	font-size: 16px;
 	font-weight: bold;
 	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
