--- a/css/cadastro-animal-style.css
+++ b/css/cadastro-animal-style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@400;500&display=swap');
 
 * {
     margin: 0;
@@ -6,13 +7,6 @@
     font-family: 'Rubik', sans-serif;
 }
 
-#para-adotar {
-    border-bottom: none;
-}
-
-#cadastrar-felpudo {
-    border-bottom: 2px solid #FFC90E;
-}
 
 .desktop-menu a {
     font-family: 'Gabarito', cursive;
