--- a/css/contato-style.css
+++ b/css/contato-style.css
@@ -47,4 +47,55 @@
     font-weight: 1000;
     font-size: 48px;
     padding: 10px 0;
+}   
+
+/*MAIN*/
+
+
+main {
+    display: flex;
+    justify-content: space-around;
+}
+
+
+.contato-infos h3 {
+    padding: 0 0 10px 0;
+    font-size: 24px;
+}
+
+.contato-infos p {
+    padding: 0 0 10px 0;
+}
+
+
+.container-contato h2, .container-mensagem h2{
+    font-family: 'Inter', sans-serif;
+    padding: 40px 0 40px 0;
+    font-size: 32px;
+    font-weight: 500;
+}
+
+
+.container-mensagem input, textarea {
+    padding: 20px;
+    width: 400px;
+    
+    border-radius: 5px;
+    border: 1px solid #6d6d76;
+}
+
+.container-mensagem #button {
+    background-color: #FFC90E;
+    border: none;
+
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+
+    padding: 20px;
+
+    margin-top: 10px;
+    margin-bottom: 30px;
+
+    cursor: pointer;
 }
